# taiwu-backup

./: .gitignore  Cargo.toml  Readme.md  build.rs
.cargo/: config
assets/: tray.rc
src/: game_root.rs  lib.rs  main.rs
